--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+      <div class="nav-conteiner">
+        <nav>
+            <ul>
+                <li><a href="#">Статья</a></li>
+                <li><a href="#">Обсуждение</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">Читать</a></li>
+                <li><a href="#">Текущая версия</a></li>
+                <li><a href="#">Править</a></li>
+                <li><a href="#">Править код</a></li>
+                <li><a href="#">История</a></li>
+            </ul>
+        </nav>
+      </div>
     <div>
         <h1>HTML</h1>
         <div class="img-conteiner">
