--- a/index.html
+++ b/index.html
@@ -6,11 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="static/styles/styles.css">
+    <style>
+        a{
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
     <div class="page">
        <div class="header">   
+        <div>
+            <img src="https://argumentiru.com/images/arhnews/502481.jpg" alt="">
+        </div>
+        <ol>
+            <li><a href="#">Заглавная страница</a></li>
+            <li><a href="#">Содержание</a></li>
+            <li><a href="#">Версии</a></li>
+            <li><a href="#">Избранные статьи</a></li>
+            <li><a href="#">Случайные статьи</a>
+            <li><a href="#">Пожертвовать</a></li>
+        </ol>
+        <ol>
+            <li><a href="#">Заглавная страница</a></li>
+            <li><a href="#">Содержание</a></li>
+            <li><a href="#">Версии</a></li>
+            <li><a href="#">Избранные статьи</a></li>
+            <li><a href="#">Случайные статьи</a>
+            <li><a href="#">Пожертвовать</a></li>
+        </ol>
+        <ol>
+            <li><a href="#">Заглавная страница</a></li>
+            <li><a href="#">Содержание</a></li>
+            <li><a href="#">Версии</a></li>
+            <li><a href="#">Избранные статьи</a></li>
+            <li><a href="#">Случайные статьи</a>
+            <li><a href="#">Пожертвовать</a></li>
+        </ol>
+        <ol>
+            <li><a href="#">Заглавная страница</a></li>
+            <li><a href="#">Содержание</a></li>
+            <li><a href="#">Версии</a></li>
+            <li><a href="#">Избранные статьи</a></li>
+            <li><a href="#">Случайные статьи</a>
+            <li><a href="#">Пожертвовать</a></li>
+        </ol>
+        <ol>
+            <li><a href="#">Заглавная страница</a></li>
+            <li><a href="#">Содержание</a></li>
+            <li><a href="#">Версии</a></li>
+            <li><a href="#">Избранные статьи</a></li>
+            <li><a href="#">Случайные статьи</a>
+            <li><a href="#">Пожертвовать</a></li>
+        </ol>
         </div>
         <div class="section">
             <div class="nav-conteiner">
