--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
 </head>
 
 <body>
-    <div class="main" id="main2">
-        <p>text 1 div</p>
-        <p>text 1 div</p>
-        <div>
-            <p>text 2 div</p>
-            <p>text 2 div</p>
-        </div>
-    </div>
-    <div class="main border-div">
-        <p>text 1 div</p>
-        <p>text 1 div</p>
-        <div>
-            <p>text 2 div</p>
-            <p>text 2 div</p>
-        </div>
-    </div>
-</body>
+    <P>Шрифт по умолчанию равен 16px, соответственно, ширина 1em и 1rem = 16px</P>
+    <ul>
+        <li>Шрифт по умолчанию равен 
+            <ul>
+                <li>16px, соответственно
+                    <ul>
+                        <li>ширина 1em и 1rem = 16px</li>
+                    </ul>
+                </li>
+            </ul>
+        </li> 
+    </ul>
 
 </html>
