--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 
 <body>
     <P>Шрифт по умолчанию равен 16px, соответственно, ширина 1em и 1rem = 16px</P>
-    <ul>
-        <li>Шрифт по умолчанию равен 
-            <ul>
-                <li>16px, соответственно
-                    <ul>
-                        <li>ширина 1em и 1rem = 16px</li>
-                    </ul>
-                </li>
-            </ul>
-        </li> 
-    </ul>
+    <div id="red">text
+        <div id="green">text
+            <div id="eylow">text
+                <div id="grey">text
+                </div>
+            </div>
+        </div>
+    </div>
 
 </html>
