--- a/index.html
+++ b/index.html
@@ -5,19 +5,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="static/styles/styles.css">
+    <link rel="stylesheet" href="static/styles/stylemaincontainer.css">
+    <link rel="stylesheet" href="static/styles/stylecardcontainer.css">
 
 </head>
 
 <body>
-    <P>Шрифт по умолчанию равен 16px, соответственно, ширина 1em и 1rem = 16px</P>
-    <div id="red">text
-        <div id="green">text
-            <div id="eylow">text
-                <div id="grey">text
-                </div>
+    <div class="container">
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
             </div>
-        </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас </button>
+            </div>
+        </div> 
+        <div class="card">
+            <a href=""><img src="static/images/DSC2943_by_kcpru.jpg" alt=""></a>
+            <div class="info">
+                <a href="#">
+                    <p>Чебуреки</p>
+                </a>
+                <a href="#">
+                    <p>25</p>
+                </a>
+                <button>Купить сейчас</button>
+            </div>
+        </div> 
+        
     </div>
-
-</html>
+</body>
+</html> 
